--- a/bootcamp-testimonials/assets/styles.scss
+++ b/bootcamp-testimonials/assets/styles.scss
@@ -1,14 +1,21 @@
+//Constants
+$dark-color: hsl(240, 38%, 20%);
+$muted-color: hsl(240, 18%, 77%);
+$light-color: white;
+$button-radius: 30px;
+$shadow: 0px 27px 42px -27px $dark-color;
+
 //Functins and mixins
 @mixin image-bg($bg-position, $bg-image) {
   background-image: url($bg-image);
   background-repeat: no-repeat;
   background-position: $bg-position;
-  width: 100%;
 }
 
 //Styles
 * {
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 body,
@@ -19,6 +26,8 @@ html {
 
 .slider {
   @include image-bg(bottom left, "images/pattern-curve.svg");
+  padding: 70px;
+  width: 100%;
 
   //Modifiers
   &.full-height {
@@ -27,7 +36,79 @@ html {
 
   //Children
   .slide {
-    @include image-bg(right, "images/pattern-bg.svg");
     height: 100%;
+    display: flex;
+
+    & > * {
+      width: 50%;
+    }
+
+    .slide-text {
+      font-size: 32px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: relative;
+      left: 120px;
+      @include image-bg(80px 120px, "images/pattern-quotes.svg");
+
+      * {
+        color: $dark-color;
+        font-weight: 300;
+      }
+
+      .slide-text-name {
+        font-size: 1.4rem;
+        font-weight: bold;
+
+        .muted-text {
+          color: $muted-color;
+        }
+      }
+    }
+
+    .slide-image {
+      @include image-bg(right, "images/pattern-bg.svg");
+      display: flex;
+      background-size: contain;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      img {
+        max-width: 500px;
+        width: 100%;
+        border-radius: 5px;
+        box-shadow: $shadow;
+      }
+    }
+  }
+
+  .slider-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 120px;
+    height: 60px;
+    background-color: $light-color;
+    border-radius: $button-radius;
+    overflow: hidden;
+    box-shadow: $shadow;
+    position: absolute;
+    bottom: 40px;
+    left: 100px;
+
+    .slider-control {
+      width: 20px;
+      height: 20px;
+      padding: 20px 30px;
+    }
+
+    .prev-button {
+      @include image-bg(center, "images/icon-prev.svg");
+    }
+
+    .next-button {
+      @include image-bg(center, "images/icon-next.svg");
+    }
   }
 }
