--- a/social-media-dashboard/assets/styles.css
+++ b/social-media-dashboard/assets/styles.css
@@ -1,15 +1,79 @@
 * {
   box-sizing: border-box;
   transition: 300ms;
-  font-family: "Inter", sans-serif; }
-
-body,
-html {
+  font-family: "Inter", sans-serif;
   padding: 0;
   margin: 0; }
 
 .dashboard {
   width: 100%;
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-color: #1e202a;
+  position: relative;
+  z-index: 0; }
+  .dashboard * {
+    color: #8b97c6; }
+  .dashboard h1,
+  .dashboard h2,
+  .dashboard h3,
+  .dashboard h4,
+  .dashboard h5,
+  .dashboard h6 {
+    color: white; }
+  .dashboard::before {
+    display: block;
+    position: absolute;
+    content: "";
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 200px;
+    background-color: #1f212e;
+    z-index: 1; }
+  .dashboard__titlebar {
+    z-index: 2;
+    position: relative; }
+  .dashboard .title__content {
+    color: white; }
+  .dashboard .title__summary {
+    color: #8b97c6; }
+  .dashboard .toggle {
+    display: flex;
+    align-items: center; }
+    .dashboard .toggle__text {
+      display: inline-block;
+      margin-right: 15px; }
+    .dashboard .toggle__button {
+      display: inline-block;
+      width: 60px;
+      height: 30px;
+      background: linear-gradient(90deg, #378fe6 0%, #3eda82 100%);
+      border-radius: 30px;
+      position: relative; }
+      .dashboard .toggle__button::after {
+        content: "";
+        display: inline-block;
+        height: 25px;
+        width: 25px;
+        background-color: #252a41;
+        border-radius: 15px;
+        position: absolute;
+        right: 5px;
+        top: 50%;
+        bottom: 50%;
+        transform: translateY(-50%); }
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: auto;
+  padding: 30px; }
+
+.row {
+  display: flex;
+  width: 100%;
+  align-items: center; }
+  .row--between {
+    justify-content: space-between; }
 
 /*# sourceMappingURL=styles.css.map */
