--- a/social-media-dashboard/assets/styles.scss
+++ b/social-media-dashboard/assets/styles.scss
@@ -1,6 +1,6 @@
 //Variables
 $mobile: 375px;
-$desktop: 144px;
+$desktop: 1440px;
 
 //Dark Theme
 $dt-very-dark-blue: hsl(230, 17%, 14%);
@@ -38,10 +38,6 @@ $youtube: hsl(348, 97%, 39%);
   box-sizing: border-box;
   transition: 300ms;
   font-family: "Inter", sans-serif;
-}
-
-body,
-html {
   padding: 0;
   margin: 0;
 }
@@ -49,4 +45,95 @@ html {
 .dashboard {
   width: 100%;
   min-height: 100vh;
+  background-color: $dt-very-dark-blue;
+  position: relative;
+  z-index: 0;
+
+  * {
+    color: $dt-desaturated-blue;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: $dt-white;
+  }
+
+  &::before {
+    display: block;
+    position: absolute;
+    content: "";
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 200px;
+    background-color: $dt-very-dark-blue-ligther;
+    z-index: 1;
+  }
+
+  &__titlebar {
+    z-index: 2;
+    position: relative;
+  }
+
+  .title {
+    &__content {
+      color: $dt-white;
+    }
+
+    &__summary {
+      color: $dt-desaturated-blue;
+    }
+  }
+
+  .toggle {
+    display: flex;
+    align-items: center;
+    &__text {
+      display: inline-block;
+      margin-right: 15px;
+    }
+    &__button {
+      display: inline-block;
+      width: 60px;
+      height: 30px;
+      background: $toggle-gradient;
+      border-radius: 30px;
+      position: relative;
+
+      &::after {
+        content: "";
+        display: inline-block;
+        height: 25px;
+        width: 25px;
+        background-color: $dt-dark-saturated-blue;
+        border-radius: 15px;
+        position: absolute;
+        right: 5px;
+        top: 50%;
+        bottom: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
+}
+
+.container {
+  width: 100%;
+  max-width: $desktop;
+  margin: auto;
+  padding: 30px;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  align-items: center;
+
+  &--between {
+    justify-content: space-between;
+  }
 }
