--- a/social-media-dashboard/assets/styles.css
+++ b/social-media-dashboard/assets/styles.css
@@ -1,5 +1,7 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: 300ms;
   transition: 300ms;
   font-family: "Inter", sans-serif;
   padding: 0;
@@ -38,8 +40,15 @@
   .dashboard .title__summary {
     color: #8b97c6; }
   .dashboard .toggle {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center; }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
     .dashboard .toggle__text {
       display: inline-block;
       margin-right: 15px; }
@@ -47,6 +56,7 @@
       display: inline-block;
       width: 60px;
       height: 35px;
+      background: -webkit-gradient(linear, left top, right top, from(#378fe6), to(#3eda82));
       background: linear-gradient(90deg, #378fe6 0%, #3eda82 100%);
       border-radius: 30px;
       position: relative; }
@@ -61,29 +71,103 @@
         right: 5px;
         top: 50%;
         bottom: 50%;
-        transform: translateY(-50%) translateX(0);
+        -webkit-transform: translateY(-50%) translateX(0);
+                transform: translateY(-50%) translateX(0);
+        -webkit-transition: 300ms;
         transition: 300ms; }
+  .dashboard .summary-cards {
+    position: relative;
+    z-index: 1; }
+  .dashboard .card {
+    background-color: #252a41;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 40px 20px;
+    border-radius: 5px; }
+    .dashboard .card--facebook {
+      border-top: 3px solid #198ff5; }
+      .dashboard .card--facebook .card__username {
+        background-image: url(images/icon-facebook.svg); }
+    .dashboard .card--twitter {
+      border-top: 3px solid #1ca0f2; }
+      .dashboard .card--twitter .card__username {
+        background-image: url(images/icon-twitter.svg); }
+    .dashboard .card--instagram {
+      border-top: 3px solid linear-gradient(90deg, #fdc468 0%, #df4996 100%); }
+      .dashboard .card--instagram .card__username {
+        background-image: url(images/icon-instagram.svg); }
+    .dashboard .card--youtube {
+      border-top: 3px solid #c4032a; }
+      .dashboard .card--youtube .card__username {
+        background-image: url(images/icon-youtube.svg); }
+    .dashboard .card__username {
+      background-repeat: no-repeat;
+      padding-left: 30px;
+      font-size: 0.9rem;
+      margin-bottom: 10px; }
+    .dashboard .card__stats {
+      text-align: center; }
+      .dashboard .card__stats > *:first-child {
+        font-size: 4rem; }
+      .dashboard .card__stats > *:last-child {
+        text-transform: uppercase;
+        letter-spacing: 0.5rem;
+        font-size: 0.7rem; }
   .dashboard.dashboard--light {
     background-color: white; }
     .dashboard.dashboard--light::before {
       background-color: #f5f7ff; }
+    .dashboard.dashboard--light * {
+      color: #63687e; }
+    .dashboard.dashboard--light h1,
+    .dashboard.dashboard--light h2,
+    .dashboard.dashboard--light h3,
+    .dashboard.dashboard--light h4,
+    .dashboard.dashboard--light h5,
+    .dashboard.dashboard--light h6 {
+      color: #1e202a; }
     .dashboard.dashboard--light .toggle__text {
       color: #63687e; }
     .dashboard.dashboard--light .toggle__button::after {
       background-color: #f5f7ff;
-      transform: translateY(-50%) translateX(-25px); }
+      -webkit-transform: translateY(-50%) translateX(-25px);
+              transform: translateY(-50%) translateX(-25px); }
 
 .container {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1200px;
   margin: auto;
   padding: 30px; }
 
 .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  align-items: center; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .row--between {
-    justify-content: space-between; }
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .row > * {
+    margin: 15px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+    .row > *:first-child {
+      margin-left: 0px; }
+    .row > *:last-child {
+      margin-right: 0px; }
 
 /*# sourceMappingURL=styles.css.map */
