--- a/social-media-dashboard/assets/styles.scss
+++ b/social-media-dashboard/assets/styles.scss
@@ -88,6 +88,10 @@ $youtube: hsl(348, 97%, 39%);
   .title {
     &__content {
       color: $dt-white;
+
+      &--level2 {
+        font-size: 1.7rem;
+      }
     }
 
     &__summary {
@@ -141,6 +145,8 @@ $youtube: hsl(348, 97%, 39%);
     align-items: center;
     padding: 40px 20px;
     border-radius: 5px;
+    position: relative;
+    overflow: hidden;
 
     &--facebook {
       border-top: solidBorder($facebook);
@@ -157,7 +163,16 @@ $youtube: hsl(348, 97%, 39%);
     }
 
     &--instagram {
-      border-top: solidBorder($instagram);
+      &::before {
+        background: $instagram;
+        content: "";
+        width: 100%;
+        height: 3px;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+      }
+
       .card__username {
         background-image: url(images/icon-instagram.svg);
       }
@@ -174,11 +189,14 @@ $youtube: hsl(348, 97%, 39%);
       background-repeat: no-repeat;
       padding-left: 30px;
       font-size: 0.9rem;
-      margin-bottom: 10px;
+      & > * {
+        margin-bottom: 10px;
+      }
     }
 
     &__stats {
       text-align: center;
+      margin-bottom: 20px;
       & > * {
         &:first-child {
           font-size: 4rem;
@@ -187,6 +205,30 @@ $youtube: hsl(348, 97%, 39%);
           text-transform: uppercase;
           letter-spacing: 0.5rem;
           font-size: 0.7rem;
+        }
+      }
+    }
+
+    &__today {
+      background-repeat: no-repeat;
+      padding-left: 15px;
+      font-size: 0.9rem;
+      text-align: center;
+      background-position: left center;
+      * {
+        font-weight: bold;
+      }
+      &--up {
+        background-image: url(images/icon-up.svg);
+        * {
+          color: $lime-green;
+        }
+      }
+
+      &--down {
+        background-image: url(images/icon-down.svg);
+        * {
+          color: $bright-red;
         }
       }
     }
