--- a/social-media-dashboard/assets/styles.css
+++ b/social-media-dashboard/assets/styles.css
@@ -29,18 +29,22 @@
     left: 0;
     right: 0;
     top: 0;
-    height: 200px;
+    height: 300px;
     background-color: #1f212e;
     z-index: 1; }
   .dashboard__titlebar {
     z-index: 2;
     position: relative; }
+    .dashboard__titlebar--withmargin {
+      margin-bottom: 20px; }
   .dashboard .title__content {
-    color: white; }
+    color: white;
+    margin-bottom: 5px; }
     .dashboard .title__content--level2 {
       font-size: 1.7rem; }
   .dashboard .title__summary {
-    color: #8b97c6; }
+    color: #8b97c6;
+    font-weight: bold; }
   .dashboard .toggle {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -56,8 +60,8 @@
       margin-right: 15px; }
     .dashboard .toggle__button {
       display: inline-block;
-      width: 60px;
-      height: 35px;
+      min-width: 60px;
+      height: 30px;
       background: -webkit-gradient(linear, left top, right top, from(#378fe6), to(#3eda82));
       background: linear-gradient(90deg, #378fe6 0%, #3eda82 100%);
       border-radius: 30px;
@@ -70,7 +74,7 @@
         background-color: #252a41;
         border-radius: 15px;
         position: absolute;
-        right: 5px;
+        right: 3px;
         top: 50%;
         bottom: 50%;
         -webkit-transform: translateY(-50%) translateX(0);
@@ -97,6 +101,10 @@
     border-radius: 5px;
     position: relative;
     overflow: hidden; }
+    .dashboard .card:hover {
+      background-color: #374062;
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
     .dashboard .card--facebook {
       border-top: 3px solid #198ff5; }
       .dashboard .card--facebook .card__username {
@@ -123,7 +131,8 @@
     .dashboard .card__username {
       background-repeat: no-repeat;
       padding-left: 30px;
-      font-size: 0.9rem; }
+      font-size: 0.9rem;
+      font-weight: bold; }
       .dashboard .card__username > * {
         margin-bottom: 10px; }
     .dashboard .card__stats {
@@ -151,6 +160,32 @@
         background-image: url(images/icon-down.svg); }
         .dashboard .card__today--down * {
           color: #dc414c; }
+      .dashboard .card__today--right {
+        text-align: right; }
+    .dashboard .card--small {
+      padding: 25px 20px; }
+    .dashboard .card__title {
+      width: 100%;
+      background-repeat: no-repeat;
+      background-position: right;
+      margin-bottom: 15px; }
+      .dashboard .card__title--facebook {
+        background-image: url(images/icon-facebook.svg); }
+      .dashboard .card__title--twitter {
+        background-image: url(images/icon-twitter.svg); }
+      .dashboard .card__title--instagram {
+        background-image: url(images/icon-instagram.svg); }
+      .dashboard .card__title--youtube {
+        background-image: url(images/icon-youtube.svg); }
+    .dashboard .card__footer {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      .dashboard .card__footer > * {
+        margin-bottom: 0;
+        -webkit-box-flex: 0;
+            -ms-flex-positive: 0;
+                flex-grow: 0; }
   .dashboard.dashboard--light {
     background-color: white; }
     .dashboard.dashboard--light::before {
@@ -164,12 +199,14 @@
     .dashboard.dashboard--light h5,
     .dashboard.dashboard--light h6 {
       color: #1e202a; }
+    .dashboard.dashboard--light .card {
+      background-color: #f0f2fa; }
     .dashboard.dashboard--light .toggle__text {
       color: #63687e; }
     .dashboard.dashboard--light .toggle__button::after {
       background-color: #f5f7ff;
-      -webkit-transform: translateY(-50%) translateX(-25px);
-              transform: translateY(-50%) translateX(-25px); }
+      -webkit-transform: translateY(-50%) translateX(-29px);
+              transform: translateY(-50%) translateX(-29px); }
 
 .container {
   width: 100%;
@@ -194,9 +231,20 @@
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1; }
-    .row > *:first-child {
-      margin-left: 0px; }
-    .row > *:last-child {
-      margin-right: 0px; }
+    @media (min-width: 705px) {
+      .row > *:first-child {
+        margin-left: 0px; }
+      .row > *:last-child {
+        margin-right: 0px; } }
+  .row--nogrow > * {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0; }
+  @media screen and (max-width: 705px) {
+    .row.md {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 /*# sourceMappingURL=styles.css.map */
