--- a/social-media-dashboard/assets/styles.scss
+++ b/social-media-dashboard/assets/styles.scss
@@ -1,5 +1,5 @@
 //Variables
-$mobile: 375px;
+$mobile: 705px;
 $desktop: 1440px;
 
 //Dark Theme
@@ -75,7 +75,7 @@ $youtube: hsl(348, 97%, 39%);
     left: 0;
     right: 0;
     top: 0;
-    height: 200px;
+    height: 300px;
     background-color: $dt-very-dark-blue-ligther;
     z-index: 1;
   }
@@ -83,12 +83,15 @@ $youtube: hsl(348, 97%, 39%);
   &__titlebar {
     z-index: 2;
     position: relative;
+    &--withmargin {
+      margin-bottom: 20px;
+    }
   }
 
   .title {
     &__content {
       color: $dt-white;
-
+      margin-bottom: 5px;
       &--level2 {
         font-size: 1.7rem;
       }
@@ -96,6 +99,7 @@ $youtube: hsl(348, 97%, 39%);
 
     &__summary {
       color: $dt-desaturated-blue;
+      font-weight: bold;
     }
   }
 
@@ -109,8 +113,8 @@ $youtube: hsl(348, 97%, 39%);
     }
     &__button {
       display: inline-block;
-      width: 60px;
-      height: 35px;
+      min-width: 60px;
+      height: 30px;
       background: $toggle-gradient;
       border-radius: 30px;
       position: relative;
@@ -123,7 +127,7 @@ $youtube: hsl(348, 97%, 39%);
         background-color: $dt-dark-desaturated-blue;
         border-radius: 15px;
         position: absolute;
-        right: 5px;
+        right: 3px;
         top: 50%;
         bottom: 50%;
         transform: translateY(-50%) translateX(0);
@@ -147,6 +151,11 @@ $youtube: hsl(348, 97%, 39%);
     border-radius: 5px;
     position: relative;
     overflow: hidden;
+
+    &:hover {
+      background-color: lighten($color: $dt-dark-desaturated-blue, $amount: 10);
+      transform: scale(1.05);
+    }
 
     &--facebook {
       border-top: solidBorder($facebook);
@@ -189,6 +198,7 @@ $youtube: hsl(348, 97%, 39%);
       background-repeat: no-repeat;
       padding-left: 30px;
       font-size: 0.9rem;
+      font-weight: bold;
       & > * {
         margin-bottom: 10px;
       }
@@ -231,6 +241,44 @@ $youtube: hsl(348, 97%, 39%);
           color: $bright-red;
         }
       }
+
+      &--right {
+        text-align: right;
+      }
+    }
+
+    &--small {
+      padding: 25px 20px;
+    }
+
+    &__title {
+      width: 100%;
+      background-repeat: no-repeat;
+      background-position: right;
+      margin-bottom: 15px;
+      &--facebook {
+        background-image: url(images/icon-facebook.svg);
+      }
+
+      &--twitter {
+        background-image: url(images/icon-twitter.svg);
+      }
+
+      &--instagram {
+        background-image: url(images/icon-instagram.svg);
+      }
+
+      &--youtube {
+        background-image: url(images/icon-youtube.svg);
+      }
+    }
+
+    &__footer {
+      justify-content: space-between;
+      & > * {
+        margin-bottom: 0;
+        flex-grow: 0;
+      }
     }
   }
 
@@ -254,6 +302,10 @@ $youtube: hsl(348, 97%, 39%);
       color: $lt-very-dark-blue;
     }
 
+    .card {
+      background-color: $lt-light-grayish-blue;
+    }
+
     .toggle {
       &__text {
         color: $lt-dark-grayish-blue;
@@ -261,7 +313,7 @@ $youtube: hsl(348, 97%, 39%);
       &__button {
         &::after {
           background-color: $lt-very-pale-blue;
-          transform: translateY(-50%) translateX(-25px);
+          transform: translateY(-50%) translateX(-29px);
         }
       }
     }
@@ -288,12 +340,26 @@ $youtube: hsl(348, 97%, 39%);
     margin: 15px;
     flex-grow: 1;
 
-    &:first-child {
-      margin-left: 0px;
-    }
+    @media (min-width: $mobile) {
+      &:first-child {
+        margin-left: 0px;
+      }
 
-    &:last-child {
-      margin-right: 0px;
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
+  }
+
+  &--nogrow {
+    & > * {
+      flex-grow: 0;
+    }
+  }
+
+  &.md {
+    @media screen and(max-width: $mobile) {
+      flex-direction: column;
     }
   }
 }
